--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy4.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy4.Rmd
@@ -25,12 +25,8 @@ Model with variable selection using p(corr) corresponding to p-value less than `
 
 ### P(corr) table, investigating different p(corr) cutoff using minimal amount of variables
 
-```{R}
-ortho_pre_vs <- ortho_pre_vs_Model2
-ortho_post_vs <- ortho_post_vs_Model2
-```
 
-#### Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection, `r ortho_post_vs` orthogonal in model post variable selection and using minimal amount of variables.
+#### Table of models after variable selection using different p(corr) cutoff.
 
 ```{R pcorr table model4}
 pcorr_corresponging_to_pvalue <- calculatepcorrfrompvalue(selectpvalue = p_pearson_of_pcorr_cutoff, n = nrow(subsetsampleID))
@@ -76,12 +72,14 @@ if (pcorr == result_Model3$resultaftervs$`pcorr cutoff`) {
     model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model4 <-
       model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
         subsetdatamatrix,
-        no_of_orthogonal_in_model_pre_vs = max_no_of_ortho_pre_vs_in_Model3_and_Model4,
-        no_of_orthogonal_in_model_post_vs = max_no_of_ortho_post_vs_in_Model3_and_Model4,
+        no_of_orthogonal_in_model_pre_vs = max_pcorrtable_with_max_Q2_and_diff_less_than_02_few_variables$`ortho pre v.s.`,
+        no_of_orthogonal_in_model_post_vs = max_pcorrtable_with_max_Q2_and_diff_less_than_02_few_variables$`ortho post v.s.`,
         class = classordered,
         pcorr = pcorr,
         no_permutations_post_vs = no_permutations_post_vs,
-        variable_selection_using_VIP
+        variable_selection_using_VIP,
+      max_no_of_ortho_pre_vs,
+      max_no_of_ortho_post_vs
       )
   }
 }
@@ -132,7 +130,9 @@ if (!is.null(testvariable)) {
       printoptmodel = "none",
       plotoptmodel = "none",
       no_permutations_post_vs = no_permutations_post_vs_selected_models,
-      variable_selection_using_VIP
+      variable_selection_using_VIP,
+      max_no_of_ortho_pre_vs,
+      max_no_of_ortho_post_vs
     )
 }
 ```
@@ -215,12 +215,14 @@ if (result_Model4$resultaftervs$`pcorr cutoff` != result_Model3$resultaftervs$`p
         subsetsampleID,
         colname_groupID,
         subsetdatamatrix,
-        ortho_pre_vs,
-        ortho_post_vs,
+        ortho_pre_vs=NA,
+        ortho_post_vs=NA,
         class = classordered,
         pcorr,
         no_permutations_over_vs,
-        variable_selection_using_VIP
+        variable_selection_using_VIP,
+      max_no_of_ortho_pre_vs,
+      max_no_of_ortho_post_vs
       )
   }
 } else {
@@ -268,7 +270,8 @@ kable(percentage_and_pvalue_perm_Model4, row.names = T) %>%
 
 ```{R plot permutation over vs model4, fig.width = 10}
 
-plotpermutationswithoriginalmodelandreg(permutated_models_Model4, subsetdatamatrix, ortho_pre_vs, ortho_post_vs, class = classordered, pcorr, variable_selection_using_VIP)
+plotpermutationswithoriginalmodelandreg(permutated_models_Model4, subsetdatamatrix, ortho_pre_vs, ortho_post_vs, class = classordered, pcorr, variable_selection_using_VIP, max_no_of_ortho_pre_vs, max_no_of_ortho_post_vs)
+
 ```
 
 ### ROC curve
