--- a/Rscript/roplspvs_Summary_of_models.Rmd
+++ b/Rscript/roplspvs_Summary_of_models.Rmd
@@ -30,7 +30,7 @@ params:
 ---
 title: "Summary ropls models `r gsub("_"," ",paste(params$projectname))`"
 author: |
-    | Ropls with permutated variable selection: Version 0.15.0
+    | roplspvs - Ropls with permutated variable selection: Version 0.15.0
     | Marika Strom
 date: "`r Sys.Date()`"
 ---
@@ -70,7 +70,7 @@ library(devtools)
 library(DescTools)
 
 source(paste(directory_and_filename_function_file))
-directory_Rmarkdownfiles <- paste(directory_of_Ropls_with_permutated_variable_selection,"/",foldername_Rmarkdownfiles,"/",sep="")
+directory_Rmarkdownfiles <- paste(directory_of_roplspvs,"/",foldername_Rmarkdownfiles,"/",sep="")
 
 ```
 
@@ -119,7 +119,7 @@ model_strategy<-1}
   
 ```
 
-```{r, child=if (1 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_each_strategy.Rmd',sep="")}
+```{r, child=if (1 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_each_strategy.Rmd',sep="")}
 
 ```
 ```{r, model strategy 2}
@@ -133,7 +133,7 @@ model_strategy<-2}
   
 ```
 
-```{r, child=if (2 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_each_strategy.Rmd',sep="")}
+```{r, child=if (2 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_each_strategy.Rmd',sep="")}
 
 ```
 ```{r, model strategy 3}
@@ -147,7 +147,7 @@ model_strategy<-3}
   
 ```
 
-```{r, child=if (3 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_each_strategy.Rmd',sep="")}
+```{r, child=if (3 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_each_strategy.Rmd',sep="")}
 
 ```
 
@@ -162,7 +162,7 @@ model_strategy<-4}
   
 ```
 
-```{r, child=if (4 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_each_strategy.Rmd',sep="")}
+```{r, child=if (4 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_each_strategy.Rmd',sep="")}
 
 ```
 
@@ -175,7 +175,7 @@ model_strategy<-5}
   
 ```
 
-```{r, child=if (5 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_iteration_model.Rmd',sep="")}
+```{r, child=if (5 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_iteration_model.Rmd',sep="")}
 
 ```
 
@@ -187,7 +187,7 @@ model_strategy<-2}
   
 ```
 
-```{r, child=if (2 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_pcorr_selected_variables.Rmd',sep="")}
+```{r, child=if (2 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_pcorr_selected_variables.Rmd',sep="")}
 
 ```
 
@@ -199,7 +199,7 @@ model_strategy<-3}
   
 ```
 
-```{r, child=if (3 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_pcorr_selected_variables.Rmd',sep="")}
+```{r, child=if (3 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_pcorr_selected_variables.Rmd',sep="")}
 
 ```
 
@@ -211,7 +211,7 @@ model_strategy<-4}
   
 ```
 
-```{r, child=if (4 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_pcorr_selected_variables.Rmd',sep="")}
+```{r, child=if (4 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_pcorr_selected_variables.Rmd',sep="")}
 
 ```
 
@@ -223,7 +223,7 @@ model_strategy<-5}
   
 ```
 
-```{r, child=if (5 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/Ropls_with_permutated_variable_selection_Summary_pcorr_selected_variables.Rmd',sep="")}
+```{r, child=if (5 %in% model_strategies_to_run) paste(directory_Rmarkdownfiles,'/roplspvs_Summary_pcorr_selected_variables.Rmd',sep="")}
 
 ```
 
