--- a/Rscript/roplspvs_Models_of_each_comparison_strategy1.Rmd
+++ b/Rscript/roplspvs_Models_of_each_comparison_strategy1.Rmd
@@ -13,7 +13,7 @@ mathjax: null
 #    | Model strategy 1
     
 author: |
-    | Ropls with permutated variable selection: Version 0.15.0
+    | roplspvs - Ropls with permutated variable selection: Version 0.15.0
     | Marika Strom
 ---
 
