--- a/Rscript/roplspvs_Models_of_each_comparison_strategy3.Rmd
+++ b/Rscript/roplspvs_Models_of_each_comparison_strategy3.Rmd
@@ -13,7 +13,8 @@ mathjax: null
 #    | Model strategy 3
     
 author: |
-    | roplspvs - Ropls with permutated variable selection: Version 0.15.0
+    | roplspvs: Version 0.16.0
+    | R orthogonal projections of latent structures with permutation over variable selection
     | Marika Strom
 ---
 
