--- a/Rscript/roplspvs_Summary_of_models.Rmd
+++ b/Rscript/roplspvs_Summary_of_models.Rmd
@@ -30,7 +30,8 @@ params:
 ---
 title: "Summary ropls models `r gsub("_"," ",paste(params$projectname))`"
 author: |
-    | roplspvs - Ropls with permutated variable selection: Version 0.15.0
+    | roplspvs: Version 0.16.0
+    | R orthogonal projections of latent structures with permutation over variable selection
     | Marika Strom
 date: "`r Sys.Date()`"
 ---
