--- a/Rscript/roplspvs_Summary_pcorr_selected_variables.Rmd
+++ b/Rscript/roplspvs_Summary_pcorr_selected_variables.Rmd
@@ -13,7 +13,8 @@ title: |
     | Model summary each strategy
 
 author: |
-    | roplspvs - Ropls with permutated variable selection: Version 0.15.0
+    | roplspvs: Version 0.16.0
+    | R orthogonal projections of latent structures with permutation over variable selection
     | Marika Strom
 ---
 
