--- a/Rscript/roplspvs_Summary_each_strategy.Rmd
+++ b/Rscript/roplspvs_Summary_each_strategy.Rmd
@@ -30,10 +30,12 @@ if (groupsnumeric == "yes"){
  summary_Model_table <- summary_Model_table[order_of_models,]
 }
 summary_Model_tabletokable <- summary_Model_table
-summary_Model_tabletokable[,c(17,18,19,20,21)] <- 
-  format(summary_Model_table[,c(17,18,19,20,21)], digits=2)
+summary_Model_tabletokable[,c(9,10,11,12)] <- 
+  format(round(summary_Model_tabletokable[,c(9,10,11,12)], digits=3))
+summary_Model_tabletokable[,c(19,20,21)] <- 
+  format(round(summary_Model_tabletokable[,c(19,20,21)], digits=2))
 summary_Model_tabletokable[,c(22,23)] <- 
-  format(summary_Model_table[,c(22,23)], scientific=TRUE, digits=2)
+  format(summary_Model_tabletokable[,c(22,23)], scientific=TRUE, digits=2)
 kable(summary_Model_tabletokable, row.names = FALSE) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 meanofR2 <- mean(summary_Model_table$`pR2Y permutated over v.s.`)
@@ -55,8 +57,9 @@ Showing significant models (p(Q2_perm_over_vs) <= 0.05 and R2Y >= 0.5 and Q2 >= 
 
 summary_Model_tablesignificant <- subset(summary_Model_table,summary_Model_table$`pQ2 permutated over v.s.`<=0.05 & summary_Model_table$`R2Y(cum)`>=0.5 & summary_Model_table$`Q2(cum)`>=0.4 & as.numeric(summary_Model_table$`Correlation between Q2 for permutations over variable selection. and correlation between permutated and unpermutated`)>=0.1&as.numeric(summary_Model_table$`P-value for correlation between Q2 for permutations over variable selection and correlation between permutated and unpermutated`)<=0.05)
 summary_Model_tablesignificanttokable <- summary_Model_tablesignificant
-summary_Model_tablesignificanttokable[,c(17,18,19,20,21)] <- format(summary_Model_tablesignificant[,c(17,18,19,20,21)], digits=2)
-summary_Model_tablesignificanttokable[,c(22,23)] <- format(summary_Model_tablesignificant[,c(22,23)], scientific=TRUE, digits=2)
+summary_Model_tablesignificanttokable[,c(9,10,11,12)] <- format(round(summary_Model_tablesignificanttokable[,c(9,10,11,12)],3))
+summary_Model_tablesignificanttokable[,c(19,20,21)] <- format(round(summary_Model_tablesignificanttokable[,c(19,20,21)],2),nsmall=2)
+summary_Model_tablesignificanttokable[,c(22,23)] <- format(summary_Model_tablesignificanttokable[,c(22,23)], scientific=TRUE, digits=2)
 kable(summary_Model_tablesignificanttokable, row.names = FALSE) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 
