--- a/Rscript/roplspvs_Summary_each_strategy.Rmd
+++ b/Rscript/roplspvs_Summary_each_strategy.Rmd
@@ -31,9 +31,9 @@ if (groupsnumeric == "yes"){
 }
 summary_Model_tabletokable <- summary_Model_table
 summary_Model_tabletokable[,c(9,10,11,12)] <- 
-  format(round(summary_Model_tabletokable[,c(9,10,11,12)], digits=3))
+  format(round(summary_Model_tabletokable[,c(9,10,11,12)], digits=3),nsmall=3)
 summary_Model_tabletokable[,c(19,20,21)] <- 
-  format(round(summary_Model_tabletokable[,c(19,20,21)], digits=2))
+  format(round(summary_Model_tabletokable[,c(19,20,21)], digits=2),nsmall=2)
 summary_Model_tabletokable[,c(22,23)] <- 
   format(summary_Model_tabletokable[,c(22,23)], scientific=TRUE, digits=2)
 kable(summary_Model_tabletokable, row.names = FALSE) %>%
@@ -44,6 +44,11 @@ meanofR2 <- format(meanofR2, digits = 2)
 meanofQ2 <- format(meanofQ2, digits = 2)
 
 ```
+Corr perm. coeff R2Y: Correlation between R2Y for permutations over variable selection and correlation between permutated and unpermutated
+Corr perm. coeff Q2: Correlation between Q2 for permutations over variable selection. and correlation between permutated and unpermutated
+Corr perm. p value R2Y: P-value for correlation between R2Y for permutations over variable selection and correlation between permutated and unpermutated
+Corr perm. p value Q2: P-value for correlation between Q2 for permutations over variable selection and correlation between permutated and unpermutated
+
 Average of pR2Y respectively pQ2 of models with permutations over v.s.:
 pR2Y: `r meanofR2`
 pQ2: `r meanofQ2`
@@ -51,13 +56,13 @@ pQ2: `r meanofQ2`
 
 
 # Significant model strategy `r model_strategy`.  `r model_description` 
-Showing significant models (p(Q2_perm_over_vs) <= 0.05 and R2Y >= 0.5 and Q2 >= 0.4)
+Showing significant models (p(Q2_perm_over_vs) <= 0.05 and R2Y >= 0.5 and Q2 >= 0.4 and correlation of permutation coefficient>=0.1 and p-value of correlation of permutation<=0.05)
 
 ```{r, echo=FALSE}
 
-summary_Model_tablesignificant <- subset(summary_Model_table,summary_Model_table$`pQ2 permutated over v.s.`<=0.05 & summary_Model_table$`R2Y(cum)`>=0.5 & summary_Model_table$`Q2(cum)`>=0.4 & as.numeric(summary_Model_table$`Correlation between Q2 for permutations over variable selection. and correlation between permutated and unpermutated`)>=0.1&as.numeric(summary_Model_table$`P-value for correlation between Q2 for permutations over variable selection and correlation between permutated and unpermutated`)<=0.05)
+summary_Model_tablesignificant <- subset(summary_Model_table,summary_Model_table$`pQ2 permutated over v.s.`<=0.05 & summary_Model_table$`R2Y(cum)`>=0.5 & summary_Model_table$`Q2(cum)`>=0.4 & as.numeric(summary_Model_table$`Corr perm. coeff Q2`)>=0.1&as.numeric(summary_Model_table$`Corr perm. p value Q2`)<=0.05)
 summary_Model_tablesignificanttokable <- summary_Model_tablesignificant
-summary_Model_tablesignificanttokable[,c(9,10,11,12)] <- format(round(summary_Model_tablesignificanttokable[,c(9,10,11,12)],3))
+summary_Model_tablesignificanttokable[,c(9,10,11,12)] <- format(round(summary_Model_tablesignificanttokable[,c(9,10,11,12)],3),nsmall=3)
 summary_Model_tablesignificanttokable[,c(19,20,21)] <- format(round(summary_Model_tablesignificanttokable[,c(19,20,21)],2),nsmall=2)
 summary_Model_tablesignificanttokable[,c(22,23)] <- format(summary_Model_tablesignificanttokable[,c(22,23)], scientific=TRUE, digits=2)
 kable(summary_Model_tablesignificanttokable, row.names = FALSE) %>%
